<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="mr_media_route_controller_disconnect">Disconnect</string>
    <string name="mr_media_route_controller_no_info_available">No info available</string>
    <string name="mr_media_route_controller_pause">Pause</string>
    <string name="mr_media_route_controller_play">Play</string>
    <string name="mr_media_route_controller_settings_description">Route settings</string>
    <string name="mr_media_route_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="Rs">₹</string>
    <string name="Terms_and_Conditions">Terms and Conditions</string>
    <string name="aarti_timing">Aarti Time</string>
    <string name="about_hotel">About Hotel</string>
    <string name="about_temple">About Temple</string>
    <string name="about_us">About us</string>
    <string name="about_us_capital">ABOUT US</string>
    <string name="about_vrindavan">ABOUT VRINDAVAN</string>
    <string name="action_settings">Settings</string>
    <string name="address">Address</string>
    <string name="administration">ADMINISTRATION</string>
    <string name="app_name">Braj Darshan</string>
    <string name="arrival">Arrival:</string>
    <string name="auto_gas">AUTO GAS</string>
    <string name="barsana">Barsana</string>
    <string name="barsana_capital">BARSANA</string>
    <string name="boarding_point">Boarding Point:</string>
    <string name="boarding_time">Boarding Time:</string>
    <string name="broken_clouds">टूटे हुए बादल</string>
    <string name="bus_details">BUS DETAILS</string>
    <string name="by_air">By Air</string>
    <string name="by_bus">BY BUS</string>
    <string name="by_road">By Road</string>
    <string name="by_train">BY TRAIN</string>
    <string name="city_history">CITY HISTORY</string>
    <string name="city_map">CITY MAP</string>
    <string name="clear_sky">साफ आसमान</string>
    <string name="click_on_map">CLICK ON MAP TO NAVIGATE</string>
    <string name="complain">complain</string>
    <string name="condition">Condition:</string>
    <string name="days_of_run">Days of Run:</string>
    <string name="degree">°C</string>
    <string name="departure">Departure:</string>
    <string name="developed_by">Developed by:</string>
    <string name="distance">Distance:</string>
    <string name="download_map">DOWNLOAD MAP</string>
    <string name="drop_time">Drop Time:</string>
    <string name="email_address">Email Address</string>
    <string name="emergency">EMERGENCY</string>
    <string name="english">English</string>
    <string name="enter_complain_toast">please enter your complain.</string>
    <string name="enter_email_toast">please enter your email.</string>
    <string name="enter_name_toast">please enter your name.</string>
    <string name="enter_phone_toast">please enter your phone number.</string>
    <string name="enter_validemail_toast">please enter valid email address.</string>
    <string name="evening">Evening</string>
    <string name="facilities">FACILITIES</string>
    <string name="fare">Fare:</string>
    <string name="few_clouds">कुछ बादल</string>
    <string name="from">From:</string>
    <string name="gallery">GALLERY</string>
    <string name="gokul">Gokul</string>
    <string name="gokul_capital">GOKUL</string>
    <string name="goverdhan">Govardhan</string>
    <string name="goverdhan_capital">GOVARDHAN</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="high">High:</string>
    <string name="hindi">Hindi</string>
    <string name="hostital">HOSPITAL</string>
    <string name="hotel">HOTEL</string>
    <string name="hotel_rates">Hotel Rate</string>
    <string name="hotels">HOTEL</string>
    <string name="how_to_reach">HOW TO REACH</string>
    <string name="humidity">Humidity:</string>
    <string name="kmh">km/h</string>
    <string name="label_btn_find">Find</string>
    <string name="last_update">Last Updated:</string>
    <string name="light_rain">हल्की बारिश</string>
    <string name="live_darshan">LIVE DARSHAN</string>
    <string name="low">Low:</string>
    <string name="mathura">Mathura</string>
    <string name="mathura_capital">MATHURA</string>
    <string name="mist">धुंध</string>
    <string name="moderate_rain">औसत दर्जे की वर्षा</string>
    <string name="morning">Morning</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nodata_available">No Data Available For This Location.</string>
    <string name="parking">PARKING</string>
    <string name="phone_number">Phone Number</string>
    <string name="photos">PHOTOS</string>
    <string name="police">POLICE STATION</string>
    <string name="powered_by">Powered by:</string>
    <string name="rain">बारिश</string>
    <string name="rate">Rate:</string>
    <string name="rating">Rating:</string>
    <string name="ratings">Rating</string>
    <string name="read_less">Read Less</string>
    <string name="read_more">Read More</string>
    <string name="restaurants">RESTAURANT</string>
    <string name="rs">₹</string>
    <string name="scattered_clouds">बिखरे हुए बादल</string>
    <string name="seats">Seats:</string>
    <string name="select_city">CHANGE PLACE</string>
    <string name="select_place">SELECT PLACE</string>
    <string name="set_language">Set Language</string>
    <string name="setting">SETTINGS</string>
    <string name="share_friends">Share with Friends</string>
    <string name="shower_rain">स्नान बारिश</string>
    <string name="snow">हिमपात</string>
    <string name="submit_complain">SUBMIT COMPLAINT</string>
    <string name="summer">Summer</string>
    <string name="taxi">TAXI</string>
    <string name="taxi_driver">TAXI DRIVER</string>
    <string name="taxi_stands">TAXI STAND</string>
    <string name="taxis">TAXI</string>
    <string name="temple">TEMPLE</string>
    <string name="temple_timings">Temple Timings</string>
    <string name="temples_capital">TEMPLES</string>
    <string name="toilets">TOILET</string>
    <string name="vrindavan">Vrindavan</string>
</resources>