<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffeb3118" android:paddingBottom="@dimen/dp3" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/hoteltopview" android:background="#ffe8ecf2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/hospitalview" android:padding="@dimen/dp10" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/hospitalicon" android:layout_width="@dimen/dp25" android:layout_height="@dimen/dp25" android:src="@drawable/hospital" />
            <TextView android:textSize="@dimen/dp11" android:textColor="#ffeb3118" android:id="@id/hospitaltext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hostital" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/policeview" android:padding="@dimen/dp10" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/policeicon" android:layout_width="@dimen/dp20" android:layout_height="@dimen/dp25" android:src="@drawable/policefade" />
            <TextView android:textSize="@dimen/dp11" android:textColor="#ff6b7481" android:id="@id/policetext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/police" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/administrationview" android:padding="@dimen/dp10" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/administrationicon" android:layout_width="@dimen/dp25" android:layout_height="@dimen/dp25" android:src="@drawable/administrationfade" />
            <TextView android:textSize="@dimen/dp11" android:textColor="#ff6b7481" android:id="@id/administrationtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/administration" />
        </LinearLayout>
    </LinearLayout>
    <ListView android:id="@id/emergencylist" android:background="#ffeb3118" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/dp3" android:divider="#ffeb3118" android:dividerHeight="@dimen/dp3" />
</LinearLayout>